syntax = "proto3";

option csharp_namespace = "HushNetwork.proto";

package rpcHush;

service HushBank {
  rpc GetAddressBalance (GetAddressBalanceRequest) returns (GetAddressBalanceReply);

  rpc TransferFunds (TransferFundsRequest) returns (TransferFundsReply);
}

message GetAddressBalanceRequest {
    string Token = 1;
    string Address = 2;
}

message GetAddressBalanceReply {
    string Balance = 1;
}

message TransferFundsRequest {
  string Id = 1;
  string FeedId = 2;
  string Token = 3;
  string FromAddress = 4;
  string ToAddress = 5;
  string Amount = 6;
  string Hash = 7;
  string Signature = 8;
  string FeedPublicEncriptAddress = 9;
}

message TransferFundsReply {
  bool Successfull = 1;
  string Message = 2;
}